# spdif-switch-t01

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.cmd  env-cmake.json.template  fresh.cmd  readme.md  switch-firmware.code-workspace
Source/: .clang-format  gcc-toolchain.cmake  gcc.cmake  headerdirs.cmake  sourcefiles.cmake
Source/App/Inc/: app.h  defs.h  detector.h  nv.h  pins.h  remote.h  router.h  selector.h
Source/App/Src/: app.c  detector.c  nv.c  remote.c  router.c  selector.c
Source/Core/Inc/: defs.h  detector.h  main.h  nv.h  remote.h  router.h  selector.h  stm32_assert.h  tim.h  usart.h
Source/Core/Src/: detector.c  gpio.c  main.c  nv.c  remote.c  router.c  selector.c  stm32f0xx_it.c  tim.c  usart.c
Source/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_ll_adc.h
Source/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_uart.c
Source/Startup/: STM32F030F4Px_FLASH.ld  system_stm32f0xx.c
source/: gcc-toolchain.cmake  headerdirs.cmake  sourcefiles.cmake
source/includes/: stm32f030xx.h
source/startup/: main.c  startup.c  startup_stm32f030f4px.s  stm32f030f4.ld  syscalls_stub.c
